# safehere

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
benchmarks/: bench_comparison.py  bench_cross_system.py  bench_detection.py  bench_fair_comparison.py  bench_false_positives.py  bench_latency.py  run_all.py
benchmarks/corpus/: advanced_adversarial.jsonl  adversarial.json  adversarial_expanded.jsonl  benign.json  benign_expanded.jsonl  new_adversarial.jsonl
examples/: live_test.py
models/: tfidf_injection_clf.pkl
src/safehere/: __init__.py  _cohere_loop.py  _extract.py  _types.py  audit.py  exceptions.py  guard.py  scoring.py
src/safehere.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/safehere/scanners/: __init__.py  _base.py  _normalize.py  _patterns_db.py  _regex_safe.py  _stats.py  anomaly.py  heuristic.py  pattern.py  polyglot.py  schema.py  semantic.py
tests/: conftest.py  test_anomaly_scanner.py  test_audit.py  test_extract.py  test_guard.py  test_integration.py  test_pattern_scanner.py  test_redteam.py  test_schema_scanner.py  test_scoring.py
tests/payloads/: benign_outputs.json  injection_payloads.json
