[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safehere"
version = "0.0.1"
description = "Runtime tool-output scanning for Cohere agents. Detects and blocks prompt injection attacks in tool results."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "SafeHere Contributors"}
]
keywords = ["cohere", "ai", "security", "prompt-injection", "tool-use", "agent-security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "cohere>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Expl0dingCat/safehere"
Documentation = "https://github.com/Expl0dingCat/safehere#readme"
Repository = "https://github.com/Expl0dingCat/safehere"
Issues = "https://github.com/Expl0dingCat/safehere/issues"

[tool.setuptools.packages.find]
where = ["src"]
