[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safehere"
version = "1.1.0"
description = "Runtime tool-output scanning for Cohere agents. Detects and blocks prompt injection attacks in tool results."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "SafeHere Contributors"}
]
keywords = ["cohere", "ai", "security", "prompt-injection", "tool-use", "agent-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
cohere = [
    "cohere>=4.0.0",
]
ml = [
    "scikit-learn>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "scikit-learn>=1.0",
]
all = [
    "cohere>=4.0.0",
    "scikit-learn>=1.0",
]

[project.urls]
Homepage = "https://github.com/Expl0dingCat/safehere"
Documentation = "https://github.com/Expl0dingCat/safehere#readme"
Repository = "https://github.com/Expl0dingCat/safehere"
Issues = "https://github.com/Expl0dingCat/safehere/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
safehere = ["tfidf_injection_clf.pkl", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
